# chktrade

./: .config.yaml  .gitignore  pyproject.toml
config/: config.yaml
src/: __main__.py  main.py
src/cktrade/: main.py
src/cktrade/pane/: newTrade.py  setting.py
src/cktrade/utils/: config.py  models.py  widget.py
src/pane/: setting.py
src/utils/: widget.py
